remove an old commons-io dependency that had vulnerabilities